--- a/Project 1/Code.rmd
+++ b/Project 1/Code.rmd
@@ -20,38 +20,58 @@ read_project_files <- function(data_path){
 
 graphs <- read_project_files('~/Documents/development/CSCI_3907/Project 1/data/facebook/')
 
-combined_graph <- data.frame()
-for (el in graphs){
-  combined_graph <- rbind(combined_graph, el)
-}
-
-cg <- graph_from_data_frame(combined_graph, directed = FALSE)
-
-simplified_graph <- simplify(cg)
-
-hist(degree(simplified_graph))
-
-E(simplified_graph)[degree(simplified_graph) < 200]
-
-
-betweenness(simplified_graph)
-
-eigen_centrality(simplified_graph)
-
-diameter(simplified_graph)
-
-largest_cliques(simplified_graph)
-
-plot(simplified_graph)
-
-ego(simplified_graph)
-
-power_centrality(simplified_graph)
-
-plot(simplified_graph, layout.reingold.tilford(simplified_graph, circular=T))
 ```
 
-
 ```{r}
-plot(cg)
+parseMainGraph <- function(graphs){
+  combined_graph <- data.frame()
+  
+  for (el in graphs){
+    combined_graph <- rbind(combined_graph, el)
+  }
+  
+  cg <- graph_from_data_frame(combined_graph, directed = FALSE)
+  
+  simplified_graph <- simplify(cg)
+  
+  hist(degree(simplified_graph))
+  
+  E(simplified_graph)[degree(simplified_graph) < 200]
+  
+  betweenness(simplified_graph)
+  
+  eigen_centrality(simplified_graph)
+  
+  diameter(simplified_graph)
+  
+  get_diameter(simplified_graph)
+  
+  plot(simplified_graph)
+  
+  plot(simplified_graph, layout.reingold.tilford(simplified_graph, circular=T)) 
+}
+
+parseMainGraph(graphs)
+```
+
+### Process individual sub graph:
+```{r}
+processGraph <- function(gr){
+  if(class(gr) != 'igraph') {
+    gr = graph_from_data_frame(gr, directed=FALSE)
+  }
+  #Plot the graph:
+  plot(gr, layout=layout_with_fr(gr, niter=1000))
+  #Largest Clique
+  largest_cliques(gr)
+  #Find Ego
+  ego(gr, 2)
+  #Power Centrality
+  alpha_centrality(gr)
+}
+
+
+for (graph in graphs){
+  processGraph(graph)
+}
 ```
