--- a/Project 3/code.Rmd
+++ b/Project 3/code.Rmd
@@ -1,15 +1,25 @@
 ---
-title: "Project 3"
-output: html_notebook
+title: "Code"
+author: "Pratheek Rebala"
+date: "4/18/2017"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(tm)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Load dataset
-
-```{r}
-data("acq")
+```{r cars}
+library('tm')
+data('acq')
 ```
 
+```{r pressure, echo=FALSE}
+t = data.frame()
+for (doc in seq(1,length(acq))){
+  currDoc = acq[doc]
+  docTermMatrix <- as.matrix(DocumentTermMatrix(currDoc))
+  t <- rbind(t, rowSums(docTermMatrix)[[1]])
+}
+top_15_documents <- acq[order(t)[1:15]]
+```
